[package]
name = "eip1962-bench"
version = "0.1.0"
authors = ["Jared Wasinger <j-wasinger@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# eip1962 = { git = "https://github.com/matter-labs/eip1962"  }
eip1962 = { package = "eth_pairings", path = "./eip1962"  }
