[package]
name = "eip1962-bench"
version = "0.1.0"
authors = ["Jared Wasinger <j-wasinger@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eip1962 = { package = "eth_pairings", git = "https://github.com/jwasinger/eip1962", branch="bench"}

[lib]
name = "scout_wasm_bench"
path = "src/scout_wasm_bench.rs"

[[bin]]
name = "bench"
path = "src/bench.rs"
